--- a/TVProject/app/build.gradle
+++ b/TVProject/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.facebook.fresco:fresco:0.11.0'
     compile files('libs/jpush-android-2.2.0.jar')
+    compile 'com.jakewharton:butterknife:5.1.1'
 }
