同步服务器视频列表+播放

--- a/TVProject/app/src/main/assets/ipconfig.properties
+++ b/TVProject/app/src/main/assets/ipconfig.properties
@@ -4,3 +4,5 @@ rootPath=http://admin.bjyfkj.net/api.php/Device/
 login=device_login
 #退出
 logout=device_logout
+#获取播放列表
+getVideoPlayList=getVideoPlayList
