--- a/TVProject/app/build.gradle
+++ b/TVProject/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.11.0'
     compile files('libs/jpush-android-2.2.0.jar')
     compile 'com.jakewharton:butterknife:5.1.1'
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
