--- a/TVProject/app/build.gradle
+++ b/TVProject/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile files('libs/jpush-android-2.2.0.jar')
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 }
