--- a/TVProject/app/build.gradle
+++ b/TVProject/app/build.gradle
@@ -37,6 +37,6 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.11.0'
     compile files('libs/jpush-android-2.2.0.jar')
     compile 'com.jakewharton:butterknife:5.1.1'
-    compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'de.greenrobot:eventbus:3.0.0-beta1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
 }
