--- a/TVProject/app/src/main/assets/ipconfig.properties
+++ b/TVProject/app/src/main/assets/ipconfig.properties
@@ -10,3 +10,5 @@ getVideoPlayList=getVideoPlayList
 getDateTime=getDateTime
 #获取广告播放列表
 getAdsPlayList=getAdsPlayList
+#广告播放次数递增
+setPlayCount=setPlayCount
