--- a/TVProject/app/build.gradle
+++ b/TVProject/app/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile files('libs/jpush-android-2.2.0.jar')
     compile 'com.jakewharton:butterknife:5.1.1'
-    compile 'de.greenrobot:eventbus:3.0.0-beta1'
+    compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
 }
