--- a/TVProject/app/src/main/assets/ipconfig.properties
+++ b/TVProject/app/src/main/assets/ipconfig.properties
@@ -1,16 +1,16 @@
 #地址
-rootPath=http://admin.bjyfkj.net/api.php/Device/
+rootPath=http://admin.bjyfkj.net/api.php/
 #登录
-login=device_login
+login=Device/device_login
 #退出
-logout=device_logout
+logout=Device/device_logout
 #获取播放列表
-getVideoPlayList=getVideoPlayList
+getVideoPlayList=Device/getVideoPlayList
 #获取系统时间
-getDateTime=getDateTime
+getDateTime=Device/getDateTime
 #获取广告播放列表
-getAdsPlayList=getAdsPlayList
+getAdsPlayList=Device/getAdsPlayList
 #广告播放次数递增
-setPlayCount=setPlayCount
+setPlayCount=Device/setPlayCount
 #自动更新
 check_update=App/checkUpdate
