--- a/TVProject/app/src/main/AndroidManifest.xml
+++ b/TVProject/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:name="net.bjyfkj.caa.permission.JPUSH_MESSAGE"
         android:protectionLevel="signature" />
 
+    //允许修改系统时区
+    <uses-permission android:name="android.permission.SET_TIME_ZONE" />
+
     //开机自启动
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
@@ -36,7 +39,7 @@
     <application
         android:name=".app.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
