--- a/TVProject/app/build.gradle
+++ b/TVProject/app/build.gradle
@@ -12,11 +12,12 @@ android {
         applicationId "net.bjyfkj.caa"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 2
-        versionName '1.0.5'
+        versionCode 3
+        versionName '1.1.0'
     }
     buildTypes {
         release {
+            //混淆
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -38,4 +39,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.facebook.fresco:fresco:0.9.0+'
+    compile 'com.zhy:autolayout:1.4.5'
 }
