--- a/TVProject/app/src/main/AndroidManifest.xml
+++ b/TVProject/app/src/main/AndroidManifest.xml
@@ -42,7 +42,14 @@
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <meta-data
+            android:name="design_width"
+            android:value="1920"></meta-data>
+        <meta-data
+            android:name="design_height"
+            android:value="1080"></meta-data>
+
         <activity
             android:name=".UI.activity.MainActivity"
             android:screenOrientation="landscape">
