--- a/TVProject/app/build.gradle
+++ b/TVProject/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.facebook.fresco:fresco:0.9.0+'
     compile 'com.zhy:autolayout:1.4.5'
+    compile 'com.android.support:design:25.0.0'
 }
